# quantitative-trading

./: .env  .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt
docs/: 01-overview.md  02-runtime-and-modes.md  03-environment-and-operations.md  04-parameter-promotion-workflow-live.md  05-review-operations.md  06-review-architecture.md  07-regime-and-decision-flow.md  08-state-and-artifacts.md  09-execution-artifacts.md  10-research-runtime-separation-live.md  11-dummy-strategy-e2e-plan.md  12-runtime-data-contract.md  README.md  environment-and-operations.md  execution-artifacts.md  multi-account-parallel-execution.md  parameter-promotion-workflow-live.md  realtime-doc-migration-index.md  regime-and-decision-flow.md  research-runtime-separation-live.md  review-architecture.md  review-operations.md  router-composite.md  runtime-and-modes.md  state-and-artifacts.md
flows/: README.md
flows/01-overview/: README.md
flows/02-runtime-and-modes/: README.md
flows/03-environment-and-operations/: README.md  run_daemon.sh
flows/04-parameter-promotion-workflow-live/: README.md
flows/05-review-operations/: README.md
flows/07-regime-and-decision-flow/: README.md
flows/08-state-and-artifacts/: README.md
flows/09-execution-artifacts/: README.md
flows/10-research-runtime-separation-live/: README.md
logs/runtime/: active-strategy.json  direct-notify-state.json  dummy-cycle-state.json  latest-execution-cycle.json  latest-strategy-handover-marker.json  latest-strategy-upgrade-request.json  workflow-events.jsonl  (+1 more)
src/: README.md  execution_cycle.py
(+66 files in other folders)
